# TruthSeeker

./: .gitignore  Objective.md  README.md  index.html  package-lock.json  package.json  vite.config.js  whisper_pipeline.ipynb
.vercel/: project.json
backend/: README.md  pyproject.toml  requirements-windows.txt  requirements.txt
backend/app/: audio_utils.py  main.py  rhetoric_fact_analyzer.py  transcription.py
backend/app/transcription/: common.py  google_speech.py  local_whisper.py  openai_whisper.py  utils.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/components/: AudioTranscriber.tsx  DemoPage.css  DemoPage.tsx  TranscriptionTester.tsx
frontend/src/components/Dialog/: Dialog.css  Dialog.tsx
frontend/src/components/VideoBackground/: VideoBackground.css  VideoBackground.tsx
frontend/src/components/transcription/: ConfigurationPanel.tsx  TranscriptionPanel.tsx  TranscriptionTester.tsx
frontend/src/hooks/: useAudioStreaming.ts  useTranscriptionConfig.ts
frontend/src/types/: transcription.ts
llm_eda/: rhetoric_analysis.ipynb
llm_prompts/: debates.py  rhetoric_analysis.html  rhetoric_analysis.ipynb  rhetoric_fact_analyzer.py
openai-realtime-agents/src/app/agentConfigs/: simpleExample.ts  tools.ts
src/: App.css  App.jsx
src/components/Dialog/: Dialog.css  Dialog.jsx
src/components/VideoBackground/: VideoBackground.css  VideoBackground.jsx
